Optimize topK heap, buffer swap, UDF dedup, and stream toList
- EmbeddingCandidateGenerationJob: replace full sort with a min-heap
  (O(n log k) vs O(n log n), allocates k tuples instead of n per user)
- MovieLensEventProcessor: swap buffer reference on flush instead of
  copying all elements + clearing (eliminates O(batchSize) allocation)
- AlsEmbeddingTrainingJob: hoist duplicated vectorToString UDF to
  object level so both write paths share one instance
- KafkaUtils: use Stream.toList() (Java 16+) over Collectors.toList(),
  remove unused Collectors import

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>